[build-system]
requires = ["setuptools"]
build-meta = "setuptools.build_meta"

[project]
name = "DJGaro"
version = "0.0.1"
description = "Minimalistic discord bot which streams music from youtube"
readme = "README.md"
dependencies = [
	"discord.py[voice]",
	"validators",
	"isoduration",
	"dotenv",
	"yt-dlp",
]

[project.scripts]
garo-start = "djgaro.main:main"

[tool.setuptools.packages.find]
exclude = ["test*", "testing*"]
namespaces = false
